Fixed issue where 'skip to awards' was visible on mobile when out of focus

--- a/css/career.css
+++ b/css/career.css
@@ -15,3 +15,6 @@ ul{
 .company{
     color: #00274C;
 }
+#award {
+    top: -60px;
+}
